build/log/idf_py_stdout_output_1384
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\ESP_IDF\ESP32_project\gatt_server\build\bootloader\esp-idf\esptool_py && D:\ESP_IDF\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe D:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/ESP_IDF/ESP32_project/gatt_server/build/bootloader/bootloader.bin"
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[2/7] Building C object esp-idf/wifi_sta/CMakeFiles/__idf_wifi_sta.dir/wifi_sta.c.obj
FAILED: esp-idf/wifi_sta/CMakeFiles/__idf_wifi_sta.dir/wifi_sta.c.obj 
ccache D:\ESP_IDF\Espressif\tools\xtensa-esp32-elf\esp-12.2.0_20230208\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/ESP_IDF/ESP32_project/gatt_server/build/config -ID:/ESP_IDF/ESP32_project/gatt_server/components/wifi_sta/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/newlib/platform_include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/freertos/FreeRTOS-Kernel/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/freertos/esp_additions/include/freertos -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/freertos/esp_additions/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/freertos/esp_additions/arch/xtensa/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_hw_support/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_hw_support/include/soc -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_hw_support/include/soc/esp32 -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_hw_support/port/esp32/. -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_hw_support/port/esp32/private_include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/heap/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/log/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/soc/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/soc/esp32 -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/soc/esp32/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/hal/esp32/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/hal/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/hal/platform_port/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_rom/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_rom/include/esp32 -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_rom/esp32 -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_common/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_system/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_system/port/soc -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_system/port/include/private -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/xtensa/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/xtensa/esp32/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/include/apps -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/include/apps/sntp -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/lwip/src/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/port/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/port/freertos/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/port/esp32xx/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/port/esp32xx/include/arch -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_wifi/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_wifi/wifi_apps/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_event/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_phy/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_phy/esp32/include -ID:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1/components/esp_netif/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/ESP_IDF/ESP32_project/gatt_server=. -fmacro-prefix-map=D:/ESP_IDF/Espressif/frameworks/esp-idf-v5.1.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/wifi_sta/CMakeFiles/__idf_wifi_sta.dir/wifi_sta.c.obj -MF esp-idf\wifi_sta\CMakeFiles\__idf_wifi_sta.dir\wifi_sta.c.obj.d -o esp-idf/wifi_sta/CMakeFiles/__idf_wifi_sta.dir/wifi_sta.c.obj -c D:/ESP_IDF/ESP32_project/gatt_server/components/wifi_sta/wifi_sta.c
D:/ESP_IDF/ESP32_project/gatt_server/components/wifi_sta/wifi_sta.c: In function 'wifi_deinit_sta':
D:/ESP_IDF/ESP32_project/gatt_server/components/wifi_sta/wifi_sta.c:52:74: error: 'instance_got_ip' undeclared (first use in this function)
   52 |     esp_event_handler_instance_unregister(IP_EVENT, IP_EVENT_STA_GOT_IP, instance_got_ip); // Hủy đăng ký sự kiện IP_EVENT_STA_GOT_IP
      |                                                                          ^~~~~~~~~~~~~~~
D:/ESP_IDF/ESP32_project/gatt_server/components/wifi_sta/wifi_sta.c:52:74: note: each undeclared identifier is reported only once for each function it appears in
D:/ESP_IDF/ESP32_project/gatt_server/components/wifi_sta/wifi_sta.c:53:73: error: 'instance_any_id' undeclared (first use in this function)
   53 |     esp_event_handler_instance_unregister(WIFI_EVENT, ESP_EVENT_ANY_ID, instance_any_id); // Hủy đăng ký sự kiện WIFI_EVENT
      |                                                                         ^~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
